# bstr

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
inc/: bstr.h
projects/eclipse/bstr_test/: .cproject  .project
src/: bstr.c
test/: testsuite_bstr.c
